# ChaosInterview

./: .clang-tidy  CMakeLists.txt  README.md
app/: main.cpp
gui/: gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressnotifierbase.h  worker.h
include/: IOParser.h  Light.h  Scene.h  Vector.h
lighting/: .clang-tidy  CMakeLists.txt
lighting/app/: CMakeLists.txt  main.cpp
lighting/cmake/: FindGMP.cmake
lighting/include/lighting/: LightingParser.h  ProgressNotifier.h
lighting/src/: BVH.h  BoundingBox.h  CMakeLists.txt  Light.h  Scene.h  ThreadManager.h  Utils.cpp  Utils.h  Vector.h
lighting/test/: test.cpp
src/: CMakeLists.txt
