file(GLOB PRIVATE_HEADER_LIST CONFIGURE_DEPENDS "${ChaosInterview_SOURCE_DIR}/src/*.h")
file(GLOB PUBLIC_HEADER_LIST CONFIGURE_DEPENDS "${ChaosInterview_SOURCE_DIR}/include/lighting/*.h")
add_library(lighting Utils.cpp ${PUBLIC_HEADER_LIST})
target_include_directories(lighting PUBLIC ../include)
target_include_directories(lighting PRIVATE ../src)
